--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,6 +76,7 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.958" />
+        app:layout_constraintHorizontal_bias="0.958"
+        android:onClick="onClickBtnNext"/>
 
 </android.support.constraint.ConstraintLayout>
