--- a/app/src/main/res/layout/activity_tab2.xml
+++ b/app/src/main/res/layout/activity_tab2.xml
@@ -22,6 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text=""
+            android:padding="2dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:textSize="30sp"
