--- a/app/src/main/res/layout/activity_tab3.xml
+++ b/app/src/main/res/layout/activity_tab3.xml
@@ -49,6 +49,7 @@
         android:text="@string/start_again"
         android:textColor="@color/colorWhite"
         android:textSize="25sp"
+        android:onClick="onClickRestart"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
